objects/GPO_Category__c.object
<CustomObject>
    <fields>
        <fullName>AOPS_Number__c</fullName>
        <label>AOPS Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desktop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desktop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Cost_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Cost Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Desktop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Desktop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_PO_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple PO Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release</label>
        <type>Checkbox</type>
    </fields>
    <label>GPO Category</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>GPO Category Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GPO Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>